--- a/src/assets/resetui.scss
+++ b/src/assets/resetui.scss
@@ -1,11 +1,27 @@
 .businessData{
 	.level_conainter{
 		.van-grid-item__content{
-		
+
 			margin: 12px 0px;
 			padding: 0px;
 			border-right: 1px solid rgb(127,127,127);
 			height: 20px;;
 		}
 	}
+}
+
+.addTask{
+	.van-field{
+		.van-field__label{
+			padding-top: 9px;
+		}
+		.van-field__body{
+			border: 1px solid #999999;
+			border-radius: 40px;
+			height: 40px;
+			padding-left: 12px;
+			padding-right: 12px;
+		}
+	}
+
 }
