--- a/src/assets/resetui.scss
+++ b/src/assets/resetui.scss
@@ -10,6 +10,14 @@
 	}
 }
 
+.newCollectTask{
+	.collapse{
+		.van-collapse-item__content{
+			padding:4px 8px;
+		}
+	}
+}
+
 .addTask{
 	.van-field{
 		.van-field__label{
